set(self floormat-draw)
file(GLOB sources "*.cpp" CONFIGURE_ARGS)
add_library(${self} OBJECT "${sources}")
target_link_libraries(${self} PUBLIC Magnum::GL)

if(NOT MSVC)
    target_precompile_headers(${self} REUSE_FROM floormat)
else()
    target_precompile_headers(${self} PRIVATE ../src/precomp.hpp)
endif()
